# Cpp20-STL-Cookbook-src

./: .gitignore  1.2格式化特化formatter.cpp  1.4安全比较不同类型的整数cmp_less.cpp  1.6查找特性测试宏.cpp  CMakeLists.txt  CMakePresets.json  README.md
src/: 1.2格式化文本实现print.cpp  1.3使用编译时constexpr vector和string.cpp  1.5三路比较运算符.cpp  1.7概念(concept)和约束(constraint)-创建更安全的模板.cpp  1.8模块.cpp  1.9视图.cpp  10.2为path类特化formatter.cpp  10.3使用带有路径的操作函数.cpp  10.4列出目录中的文件.cpp  10.5使用grep实用程序搜索目录和文件.cpp  10.6使用regex和directory_iterator重命名文件.cpp  10.7创建磁盘使用计数器.cpp  2.2span类.cpp  2.3结构化绑定.cpp  2.4if&switch中的初始化.cpp  2.5模板参数推导.cpp  2.6编译期if.cpp  3.10使用set进行输入和筛选.cpp  3.11实现简单的RPN计算器与deque.cpp  3.12使用map的词频计数器.cpp  3.13找出含有相应长句的vector.cpp  3.14使用multimap制作待办事项.cpp  3.3使用擦除函数从容器中擦除项.cpp  3.4常数时间内从未排序的向量中删除项.cpp  3.5安全的访问vector元素.cpp  3.6保持vector元素的顺序.cpp  3.7高效的将元素插入到map中.cpp  3.8高效的修改map项的键值.cpp  3.9自定义键值的unordered_map.cpp  4.10创建随机访问迭代器.cpp  4.3创建可迭代范围.cpp  4.4使迭代器与STL迭代器特性兼容.cpp  4.5使用迭代器适配器填充STL容器.cpp  4.6创建一个迭代器生成器.cpp  4.7反向迭代器的反向适配器.cpp  4.8用哨兵迭代未知长度的对象.cpp  4.9构建zip迭代器适配器.cpp  5.3用于作用域可重用代码.cpp  5.4算法库中作为谓词.cpp  5.5与function一起作为多态包装器.cpp  (+49 more)
交流/: README.md
