cmake_minimum_required (VERSION 3.8)

project (CPP20_STL_COOKBOOK)

set(CMAKE_CXX_STANDARD 23)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

file(GLOB files "src/[0-9]*.[0-9]*.cpp")
foreach(file ${files})
  get_filename_component(file_name ${file} NAME_WLE ABSOLUTE)
  message("set project: ${file_name}")
  string(REGEX MATCH "[0-9]+.[0-9]+" index_number "${file_name}")
  STRING(REGEX REPLACE "[.]" "_" index_number ${index_number})
  set("CPP20_STL_COOKBOOK_${index_number}_NAME" "${index_number}")
  add_executable ("${CPP20_STL_COOKBOOK_${index_number}_NAME}" ${file})
endforeach()

target_sources ("${CPP20_STL_COOKBOOK_1_8_NAME}" PUBLIC "src/test.ixx" "src/test2.ixx")
target_sources ("${CPP20_STL_COOKBOOK_2_4_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_2_5_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_2_6_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_3_3_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_3_4_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_3_5_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_3_6_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_3_7_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_3_8_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_3_9_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_3_10_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_3_11_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_3_12_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_3_13_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_3_14_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_4_3_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_4_4_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_4_5_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_4_6_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_4_7_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_4_8_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_4_9_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_4_10_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_5_3_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_5_4_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_5_5_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_5_6_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_5_7_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_5_8_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_5_9_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_6_2_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_6_3_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_6_4_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_6_5_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_6_6_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_6_7_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_6_8_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_6_9_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_6_10_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_7_3_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_7_4_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_7_5_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_7_6_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_7_7_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_7_8_NAME}" PUBLIC "src/print.h")
target_sources ("${CPP20_STL_COOKBOOK_7_9_NAME}" PUBLIC "src/print.h")